# tokenizer

./: .clang-format  CMakeLists.txt  README.md  Test Cases Lexical Analizer.xlsx  t.txt
.github/workflows/: onpull.yaml
src/: lexer.h  main.cpp  repl.cpp  repl.h  token.h
src/ref/: lexer_ref.go
